PR/56370: mirabilos: libedit change from 2017 kills history in gdb